--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ applyBodyTag="false"
   <apex:includeScript value="{!URLFOR($Resource.TaskyAssets, 'stream/jquery.cometd.js')}"/>
   <apex:includeScript value="{!URLFOR($Resource.TaskyAssets, 'slide.js')}"/>
   <apex:includeScript value="{!URLFOR($Resource.listMeAssets, 'd3/d3.min.js')}"/>
+  <apex:includeScript value="{!URLFOR($Resource.RollCallAssets, 'forceTK/forceTK.js')}"/>
 
 </head>
   <script type="text/javascript">
