--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ applyBodyTag="false"
   <apex:includeScript value="{!URLFOR($Resource.TaskyAssets, 'slide.js')}"/>
   <apex:includeScript value="{!URLFOR($Resource.listMeAssets, 'd3/d3.min.js')}"/>
   <apex:includeScript value="{!URLFOR($Resource.RollCallAssets, 'forceTK/forceTK.js')}"/>
-</head>
   <script type="text/javascript">
   function setSection(to, from)
   {
@@ -846,7 +845,7 @@ listMeApp.controller('EventController', function($scope) {
   // in the callback
 
   $.cometd.subscribe('/topic/CustomerUpdates', function(message) {
-    getProjects();
+    $scope.getActiveCustomers($scope.currentEvent);
   });
 });
 
