Shows current banner

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ applyBodyTag="false"
       <div class="padding">
         <p> Add banner photo: </p>
         <br/>
-        <img class="photo-preview" id="photoPreview" src="N/A"></img>
+        <img class="photo-preview" id="photoPreview" src="{!$Resource.ListMe_Background_Img}"></img>
         <br/>
         <button id="add-photo-button"> Add Photo </button>
         <input type="file" class="photo add-photo custom-file-input" id="photoFile" value="Add Photo" accept="image/*"></input>
